@@ -15,17 +15,17 @@ class ReflectionTest < Test::Unit::TestCase
 
   def test_read_attribute_names
     assert_equal(
-      %w( id title author_name author_email_address written_on last_read content approved replies_count parent_id type ).sort,
+      %w( id title author_name author_email_address bonus_time written_on last_read content approved replies_count parent_id type ).sort,
       @first.attribute_names
     )
   end
   
   def test_columns
-    assert_equal 11, Topic.columns.length
+    assert_equal 12, Topic.columns.length
   end
 
   def test_content_columns
-    assert_equal 7, Topic.content_columns.length
+    assert_equal 8, Topic.content_columns.length
   end
   
   def test_column_string_type_and_limit
